<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:eu.trentorise.smartcampus.trentinofamiglia="http://schemas.android.com/apk/res-auto" >
<!--      <item -->
<!--         android:id="@+id/to_be_update" -->
<!--         android:icon="@drawable/ic_app_update" -->
<!--         android:menuCategory="system" -->
<!--         android:orderInCategory="5" -->
<!--         android:showAsAction="always" -->
<!--         android:title="@string/to_be_updated"> -->

<!--     </item> -->
    <item
        android:id="@+id/action_poi"
        android:icon="@drawable/ic_location_actionbar"
        android:title="@string/action_poi"
        eu.trentorise.smartcampus.trentinofamiglia:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_poi_events"
                android:title="@string/mapmenu_events"/>
            <item
                android:id="@+id/action_poi_freetime"
                android:title="@string/mapmenu_freetime"/>
            <item
                android:id="@+id/action_poi_places"
                android:title="@string/mapmenu_places"/>
            <item
                android:id="@+id/action_poi_babies"
                android:title="@string/mapmenu_babies"/>
        </menu>
    </item>
            <item
        android:id="@+id/action_list"
        android:icon="@drawable/ic_list"
        android:title="@string/action_list"
        eu.trentorise.smartcampus.trentinofamiglia:showAsAction="ifRoom"/>
</menu>