<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 Trento RISE
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
         http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either   express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/eventdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <ImageView
                android:id="@+id/banner_certified"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/banner_repeat"
                android:contentDescription="@string/empty"
                android:padding="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/banner_certified"
                android:visibility="gone" />

            <TextView
                android:id="@+id/event_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/dtappcolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/event_details_loc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/event_details_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/ic_menu_map_p" />

                <ImageButton
                    android:id="@+id/event_details_directions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/ic_menu_directions_p" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

            </LinearLayout>

            <TextView
                android:id="@+id/event_timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/event_details_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web|all" />

            <TextView
                android:id="@+id/event_details_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/event_details_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autoLink="web|all" />

            <TextView
                android:id="@+id/event_details_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/multimedia_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp" >

                <ImageButton
                    android:id="@+id/gallery_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_gallery"
                    android:contentDescription="@string/empty" />

                <TextView
                    android:id="@+id/event_details_source"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ratingtext_user"
                android:textColor="@color/dtappcolor"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <RatingBar
                    android:id="@+id/event_rating"
                    style="@style/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/event_rating_raters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ratingtext_raters" />

                    <TextView
                        android:id="@+id/event_rating_average"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ratingtext_average" />
                </LinearLayout>
            </LinearLayout>


            <View
                android:id="@+id/event_comments_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/event_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="@color/dtappcolor"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/comments_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>